crates/pkgcraft/src/dep/snapshots/pkgcraft__dep__parse__parser__type_tests__keyword-3.snap
---
source: crates/pkgcraft/src/dep/parse.rs
expression: "keyword.parse(\"-amd64\").unwrap()"
---
status: Disabled
arch: amd64
