crates/pkgcraft/src/dep/snapshots/pkgcraft__dep__parse__parser__type_tests__keyword-4.snap
---
source: crates/pkgcraft/src/dep/parse.rs
expression: "keyword.parse(\"-*\").unwrap()"
---
status: Disabled
arch: "*"
