crates/pkgcraft/src/dep/snapshots/pkgcraft__dep__parse__parser__type_tests__keyword.snap
---
source: crates/pkgcraft/src/dep/parse.rs
expression: "keyword.parse(\"amd64\").unwrap()"
---
status: Stable
arch: amd64
